Add github, what the hey.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ nEJGz7jP2XshkIG8l9En9iycOfrYwFbEhA2Y8RwZ+lcpGXLLv+Gf1QA=
 				<p class="infoitem"><a href="https://www.twitter.com/wimtie" target="_blank"><img src="img/twitter2.png" class="labelicon" />Twitter</a></p>
 				<p class="infoitem"><a href="https://www.linkedin.com/pub/tim-lamballais-tessensohn/19/446/33b" target="_blank"><img src="img/linkedin.png" class="labelicon" />Linkedin</a></p>
 				<p class="infoitem"><a href="http://stackoverflow.com/users/740027/tim-lamballais" target="_blank"><img src="img/so.png" class="labelicon" />stackoverflow</a></p>
+				<p class="infoitem"><a href="https://github.com/wimtie" target="_blank"><img src="img/github.png" class="labelicon" />GitHub</a></p>
 			</div>
 		</div>
 		<!--
