--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Wimtie</title>
 		<link rel="stylesheet" href="/style.css"  />
 		<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>    
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>    
 		<script type="text/javascript" src="jquery.fullPage.js"></script>
 		<!--<script src="jquery.reveal.js" type="text/javascript"></script>-->
 		<script type="text/javascript">
